fix hero image not showing on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -487,7 +487,7 @@ section.slide-in {
   /*hero*/
   
   #hero{
-    background-image: url("./Assets/img/hero.png");
+    background-image: url("../Assets/img/hero.png");
     background-position: bottom;
     background-size: contain;
     justify-content: center;
